--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ $(document).ready(function() {
 
 <div class="container">
 	<video width="800" height="500">
-		<source src="video/pic2.webm" type="video/webm">
+		<source src="video/melo.webm" type="video/webm">
 		<source src="movie.webm" type="video/webm">
 	</video>
 </div>
